--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,3 +18,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p {
+  font-size: 16pt;
+  font-family: 'Maven Pro', sans-serif;
+  margin-bottom: 1.5rem;
+}
